<resources>
    <string name="app_name">CaseMonitoring</string>
    <string name="password">Password</string>
    <string name="Enter">Войти</string>
    <string name="login">Login</string>
    <string name="Situation">Ситуация на торговой площадке</string>
    <string name="refresh">Обновить цены</string>
    <string name="Name">Название</string>
    <string name="Count">Количество</string>
    <string name="Price">Цена</string>
    <string name="Register">Зарегистрироваться</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tree_and_ten_sec">Раз в 30 секунд</string>
    <string name="_10">Раз в 10 секунд</string>
    <string name="open">Открыть меню</string>
    <string name="close">Закрыть меню</string>
    <string name="add_Case">Добавить предмет</string>
    <string name="delete_case">Удалить предмет</string>
</resources>